complateChainModule